--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "async-validator": "^4.0.1",
     "daisyui": "^1.11.1",
     "vue": "^3.0.5",
     "vue-global-api": "^0.4.1",
