--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "async-validator": "^4.0.1",
+    "axios": "^0.21.1",
     "daisyui": "^1.11.1",
+    "lodash": "^4.17.21",
     "vue": "^3.0.5",
     "vue-global-api": "^0.4.1",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@vitejs/plugin-vue": "^1.3.0",
